<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/reset"
        android:onClick="OnClickBtnResetScore"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/grey"
        android:text="@string/reset"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/plus_1"
        android:onClick="OnClickBtnAddScore_1"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/red"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_1"
        app:layout_constraintStart_toStartOf="@+id/image_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="330dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tea_icon" />

    <TextView
        android:id="@+id/obj_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="430dp"
        android:text="@string/tea"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_1"
        app:layout_constraintStart_toStartOf="@+id/image_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/plus_2"
        android:onClick="OnClickBtnAddScore_2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/blue"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_2"
        app:layout_constraintStart_toStartOf="@+id/image_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee_icon" />


    <TextView
        android:id="@+id/obj_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="430dp"
        android:text="@string/coffee"
        android:textColor="@color/blue"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_2"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/image_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score_1"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="500dp"
        android:text="@string/score_1"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/obj_1"
        app:layout_constraintStart_toStartOf="@+id/obj_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score_2"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="500dp"
        android:text="@string/score_2"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/obj_2"
        app:layout_constraintStart_toStartOf="@+id/obj_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="500dp"
        android:text="@string/colon"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/obj_2"
        app:layout_constraintStart_toEndOf="@+id/obj_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>